# a2

./: .envrc  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  a2_travis.enc  github_travis_ecdsa.enc  shell.nix
.direnv/: cache-pre308541.6fc5211eddd  drv
.github/: codeowners  pull_request_template.md
.github/workflows/: ci.yml  test.yml
.travis/: docs.sh
examples/: certificate_client.rs  token_client.rs
src/: alpn.rs  apns_token.rs  client.rs  device_token.rs  error.rs  lib.rs  notification.rs  payload.rs  provider.rs  response.rs  service.rs  signer.rs  stream.rs
src/client/: certificate.rs  error.rs  headers.rs  mod.rs  response.rs  token.rs
src/request/: mod.rs  notification.rs  payload.rs
src/request/notification/: default.rs  localized.rs  mod.rs  options.rs  plain.rs  silent.rs  web.rs
test_cert/: README.md  test.crt  test.key
