[package]
name = "a2"
version = "0.6.2"
authors = [
  "Harry Bairstow <harry@walletconnect.com>",
  "Julius de Bruijn <julius@nauk.io>",
  "Sergey Tkachenko <seriy.tkachenko@gmail.com>", 
]
license = "MIT"
readme  = "README.md"
description = "A native, asynchronous Apple push notification client"
keywords    = ["apns", "apple", "push", "async", "http2"]
repository  = "https://github.com/walletconnect/a2.git"
homepage    = "https://github.com/walletconnect/a2"
documentation = "https://docs.rs/a2"
edition = "2021"

[features]
tracing = ["dep:tracing"]

[dependencies]
serde = { version = "1", features = ["derive"] }
erased-serde = "0.3"
serde_json = "1"
thiserror = "1"
openssl = "0.10"
hyper = { version = "0.14", features = ["client", "http2"] }
hyper-alpn = "0.4"
http = "0.2"
base64 = "0.13"
tracing = { version = "0.1.36", optional = true }

[dev-dependencies]
argparse = "0.2"
tracing-subscriber = "0.3.15"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
hyper = { version = "0.14", features = ["client", "http2", "tcp"] }
