[package]
name = "a2"
version = "0.8.0"
authors = [
  "Harry Bairstow <harry@walletconnect.com>",
  "Julius de Bruijn <julius@nauk.io>",
  "Sergey Tkachenko <seriy.tkachenko@gmail.com>",
]
license = "MIT"
readme  = "README.md"
description = "A native, asynchronous Apple push notification client"
keywords    = ["apns", "apple", "push", "async", "http2"]
repository  = "https://github.com/walletconnect/a2.git"
homepage    = "https://github.com/walletconnect/a2"
documentation = "https://docs.rs/a2"
edition = "2021"
rust-version = "1.60"  # set the minimum rust version we can work with.

[features]
default = ["openssl"]
tracing = ["dep:tracing"]
ring = ["dep:ring", "pem"]

[dependencies]
serde = { version = "1", features = ["derive"] }
erased-serde = "0.3"
serde_json = "1"
thiserror = "1"
openssl = { version = "0.10.46", optional = true }
hyper = { version = "1.0", default-features = false, features = ["client", "http2"] }
hyper-util = { version = "0.1.3", features = ["client", "http2", "client-legacy", "tokio"] }
http-body-util = "0.1.1"
# hyper-alpn = "0.4"
http = "1.0"
base64 = "0.21"
tracing = { version = "0.1", optional = true }
pem = { version = "3.0", optional = true }
ring = { version = "0.17", features = ["std"], optional = true }
hyper-rustls = { version = "0.26.0", default-features = false, features = ["http2", "webpki-roots", "ring"] }
rustls-pemfile = "2.1.1"
rustls = "0.22.0"

[dev-dependencies]
argparse = "0.2"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
